chore : connect project to ionic account

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,6 @@
 {
   "name": "objectives",
-  "app_id": "",
-  "type": "ionic-angular"
+  "app_id": "91d66e95",
+  "type": "ionic-angular",
+  "integrations": {}
 }
